--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
+    "postcss-assets": "^4.1.0",
     "postcss-pseudo-elements-content": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
