--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "postcss-assets": "^4.1.0",
+    "postcss-inline-svg": "^3.0.0",
     "postcss-pseudo-elements-content": "^1.0.0",
+    "postcss-svgo": "^2.1.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.1.10"
