--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss-assets": "^4.1.0",
     "postcss-inline-svg": "^3.0.0",
     "postcss-pseudo-elements-content": "^1.0.0",
+    "postcss-sprites": "^4.2.1",
     "postcss-svgo": "^2.1.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
