--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "postcss-assets": "^4.1.0",
+    "postcss-at2x": "^3.2.0",
     "postcss-inline-svg": "^3.0.0",
     "postcss-pseudo-elements-content": "^1.0.0",
     "postcss-sprites": "^4.2.1",
